printing folder contents

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,10 @@ jobs:
 
 
     steps:
-      - name: 'github actions'
-        run: pwd
+      - name: 'printing folder contents'
+        run: ls
 
 
-      - name: 'printing'
-        run: echo mhmd
+    
 
         
